Fix character encoding in comments.

Patch effectively by  Alexandr Zamaraev <tonal.promsoft@gmail.com> with
some corrections.
BUG:311091