parser/astbuilder.cpp
@@ -154,7 +154,7 @@ CodeAst* AstBuilder::parse(KUrl filename, QString& contents)
     int lineOffset = hacked.second;
     
     AstBuilder::pyInitLock.lock();
-    Py_SetPythonHome(AstBuilder::pyHomeDir.toAscii().data());
+    Py_SetPythonHome(AstBuilder::pyHomeDir.toUtf8().data());
     kDebug() << "Not initialized, calling init func.";
     Py_Initialize();
     Q_ASSERT(Py_IsInitialized());
@@ -162,12 +162,12 @@ CodeAst* AstBuilder::parse(KUrl filename, QString& contents)
     PyArena* arena = PyArena_New();
     Q_ASSERT(arena); // out of memory
     PyCompilerFlags* flags = new PyCompilerFlags();
-    flags->cf_flags = 0;
+    flags->cf_flags = PyCF_SOURCE_IS_UTF8;
     
     PyObject *exception, *value, *backtrace;
     PyErr_Fetch(&exception, &value, &backtrace);
 
-    mod_ty syntaxtree = PyParser_ASTFromString(contents.toAscii().data(), "<kdev-editor-contents>", file_input, flags, arena);
+    mod_ty syntaxtree = PyParser_ASTFromString(contents.toUtf8().data(), "<kdev-editor-contents>", file_input, flags, arena);
 
     if ( ! syntaxtree ) {
         kWarning() << "DID NOT RECEIVE A SYNTAX TREE -- probably parse error.";
@@ -276,7 +276,7 @@ CodeAst* AstBuilder::parse(KUrl filename, QString& contents)
             }
         }
         
-        syntaxtree = PyParser_ASTFromString(contents.toAscii(), "<kdev-editor-contents>", file_input, flags, arena);
+        syntaxtree = PyParser_ASTFromString(contents.toUtf8(), "<kdev-editor-contents>", file_input, flags, arena);
         // 3rd try: discard everything after the last non-empty line, but only until the next block start
         currentLineBeginning = qMin(contents.length() - 1, currentLineBeginning);
         errline = qMax(0, qMin(indents.length()-1, errline));
@@ -318,7 +318,7 @@ CodeAst* AstBuilder::parse(KUrl filename, QString& contents)
                 if ( c.isSpace() && atLineBeginning ) currentIndent += 1;
             }
             kDebug() << "This is what is left: " << contents;
-            syntaxtree = PyParser_ASTFromString(contents.toAscii(), "<kdev-editor-contents>", file_input, flags, arena);
+            syntaxtree = PyParser_ASTFromString(contents.toUtf8(), "<kdev-editor-contents>", file_input, flags, arena);
         }
         if ( ! syntaxtree ) {
             PyArena_Free(arena);
